[hotfix] fix spacing and value for unconfirmed skills.

--- a/front-end/src/scss/components/_compliance-dashboard.scss
+++ b/front-end/src/scss/components/_compliance-dashboard.scss
@@ -191,7 +191,7 @@
   }
 
   &__skills {
-    width: 33%
+    width: 18%;
   }
 
   &__action {
